updated run scripts (+ bat)